--- a/config.yml
+++ b/config.yml
@@ -1,190 +1,10 @@
 # Made by MrRafter
-# Plugin Made For Hispanarky
+# Dupe Made For Hispanarky
 # If you have any problems please contact me through discord: MrRafter_#4660
 
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#           Commands
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-enabled-commands:
-  help: true
-  discord: false
-  kill: true
-
-#Help Command
-help-command:
-  - "&7---------------------------------------------"
-  - "&3/kill - die"
-  - "&3/w - whisper"
-  - "&3/r - reply"
-  - "&3/togglechat - Toggle chat messages."
-  - "&3/toggledeathmsg - Toggle all death messages."
-  - "&3/toggletells - Toggle direct messages."
-  - "&3/ignore - Ignore a players messages"
-  - "&3/stats - World size and amount of players that joined."
-  - "&3/tps - TPS of server."
-  - "&7---------------------------------------------"
-
-#Manage MOTD messages (not in-game MOTD)
-motd:
-  enabled: false
-  #A MOTD will be displayed randomly
-  motd-list:
-    - "Motd Test\nNumber one"
-    - "Motd Test\nNumber two"
-    - "Motd Test\nNumber three"
-    - "Motd Test\nNumber four"
-    - "Motd Test\nNumber five"
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#           Messages
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  
-
-join-messages:
-  #Disable this if you want to use another join/leave messages plugin or want to leave it as default.
-  enabled: true
-  #Messages
-  join: "&7<player> &7joined the game"
-  leave: "&7<player> &7left the game"
-  
-links:
-  discord: "https://discord.hispanarky.es"
-  discord-message: "&6Join our Discord server: &c"
-
-Say:  
-Format: "&6&l[&c&lHispanarky&6&l]:&e&l%message%"
-
-Vanish:
-joinmessage: "&7%playername% &7joined the game"
-quitmessage: "&7%playername% &7left the game"
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#            Patches
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-leverspam:
-  #Should we patch lever spam?
-  #How many times per second can a player spam a lever
-  #Message we should send when a player spams a lever (applies for kick)
-  #Should we kick players for spamming levers?
-  enabled: true
-  interval: 6
-  message: '&6Please dont spam levers!'
-  kick: true
-
-liquidlag:
-  #Should we stop liquid from flowing at a certain tps?
-  #Tps to stop liquid from flowing at
-  enabled: true
-  disabletps: 18
-
-elytra:
-  #Limit Elytra Speed?
-  #Speed to limit at (Default 50 BPS)
-  #Kick the player for going too fast?
-  #Message to send to player if they are going too fast
-  #Disable elytras at certain tps?
-  #Tps to disable at
-  enabled: false
-  speed: 5
-  kick: false
-  message: '&6You are going too fast!'
-  disabledattps: true
-  tps: 17
-  lowtpsmessage: '&6The tps is too low todo that!'
-
-explosions:
-  #Should we disable TNT?
-  #Should we disable tnt at a certain tps?
-  #Tps to disable tnt at
-  enabed: true
-  disableattps: true
-  tps: 17
-
-preventnetherroof: true
-chunkbanpatch: true
-entitythoughportal: true
-purgewitherskulls: true
-minecartcrash: true
-PreventBookBan: true
-MaxByteSize: 130 # Per page - Not recommended to touch this
-
-PreventBowBombExploit: true
-MaxBowSquaredVelocity: 15
-
-PreventEndGatewayCrashExploit: true
-PreventDispenserCrashExploit: true
-PreventDestroyingEndPortals: true
-PreventMultipleEnderDragons: true
-
-#Dupe preventions
-DisableChestsOnDonkeys: false
-PreventDonkeysFromGoingThroughPortals: false
-PatchEndPortalDupe: true
-ExperimentalDupePatch: true
-
-ExperimentalGodModePatch: true
-PreventInvalidNames: true
-PreventFireworksInPortals: true
-PreventDropppedItemsInPortals: true
-PreventAllEntitiesInPortals: true
-PreventPortalTraps: true
-
-#AntiBlockPlaces
-antiblockplaces:
-  enabled: true
-  blocks:
-    bedrock: true
-    endportalframes: true
-    barriers: true
-    spawners: false
-
-#Random spawn configuration if the player doesn't have a bed
-random-spawn:
-  enabled: true
-  #World to respawn in
-  world-name: "world"
-  #Sets of coordinates to setup random spawn
-  minX: -500
-  minZ: -500
-  maxX: 500
-  maxZ: 500
-  
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#            Dupes
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-# Made by MrRafter
-# Dupe Made For Hispanarky
-
-modification:
+enable:
   dispenser: true
   dropper: true
 settings:
-  chance: 100
+  probability: 100
   cooldown: 1
-  
-# LavaDupe
-# 0 will effectively disable this Module.
-
-item-multiplicator: 0
-notify-dupes: enable
-
-#FrameDupe
-
-#The probability of the item getting duped once the item frame is hit.
-#100 and above means that every item will get duped. 0 will effectively disable this Module.
-
-#If this is at 100% it will break the economy of your server it is recommended to set it to 50% or less
-probability-percentage: 0
-
-piston-dupe:
-  #Turn this on if you want to enable piston dupe.
-  enabled: false
-  #Amount of shulkers clonated per dupe
-  amount: 3
-  
-salc1-dupe:
-  #Turn this on if you want to enable SalC1 dupe.
-  enabled: false
-  message: "&cPlacing chests on entities is currently disabled to prevent duplication exploits."
